# riv25-codetalk

./: .gitignore  Cargo.toml  README.md  add-dsql-permissions.sh  package-lock.json  package.json  tsconfig.base.json
ch01/: Cargo.toml  README.md
ch01/cdk/: cdk.json  package.json
ch01/cdk/lib/: ch01-stack.ts
ch01/lambda/: package.json
ch01/lambda/src/: index.ts
ch01/src/: event_handler.rs
ch02/: cdk.json  package-lock.json  package.json
ch02/lib/: ch02-stack.ts
ch02/test/: ch02.test.ts
ch03/: Cargo.toml  README.md
ch03/cdk/: cdk.json  package.json
ch03/cdk/lib/: ch03-stack.ts
ch03/lambda/: package.json
ch03/lambda/src/: index.ts
ch03/src/: event_handler.rs
ch04/: Cargo.toml  setup.sql
ch04/cdk/: cdk.json  package.json
ch04/cdk/lib/: ch04-stack.ts
ch04/lambda/: package.json
ch04/lambda/src/: index.ts
ch04/src/: event_handler.rs  main.rs
ch05/: Cargo.toml
ch05/cdk/: cdk.json  package.json
ch05/cdk/lib/: ch05-stack.ts
ch05/lambda/: package.json
ch05/lambda/src/: index.ts
ch05/src/: event_handler.rs  main.rs
ch06/: Cargo.toml  setup.sh
ch06/cdk/: cdk.json  package.json
ch06/cdk/lib/: ch06-stack.ts
ch06/lambda/: package.json
ch06/lambda/src/: index.ts
ch06/src/: event_handler.rs  main.rs
ch07/: PERFORMANCE_RESULTS.md  README.md  setup.sql
ch07/cdk/: package-lock.json  package.json
ch07/cdk/lib/: cdk-stack.ts
ch07/lambda/: package.json  tsconfig.json
ch07/lambda/src/: index.ts
invoke-test/: Cargo.toml
invoke-test/src/: main.rs
