[package]
name = "ch03"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
tokio-postgres = "0.7.14"
serde = { version = "1.0.228", features = ["derive"] }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-dsql = { version = "1.38.0", features = ["behavior-version-latest"] }
openssl = { version = "0.10.73", features = ["vendored"] }
postgres-openssl = "0.5.2"
rust_decimal = { version = "1.38.0", features = ["db-postgres"] }
