[package]
name = "ch06"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"

lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
tokio-postgres = "0.7.14"
tokio-postgres-dsql = { git = "https://github.com/marcbowes/tokio-postgres-dsql", features = ["openssl"] }
serde = { version = "1.0.228", features = ["derive"] }
rust_decimal = { version = "1.38.0", features = ["db-postgres"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
postgres-types = { version = "0.2", features = ["with-uuid-1"] }
