[package]
name = "invoke-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.62.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
